
0.6.1 release
----------------------------------------------------------------------
Tue Dec 14 17:51:20 2004                        Michael Jennings (mej)

More work from my vacation.  Turned the string class into both an
interface and an implementation, and created a new multipurpose buffer
class (untested) for arbitrary text/binary data.  (Think "strings with
embedded newlines" if that helps.)

Now, if someone were so inclined, (s)he could create a LibAST
implementation of the "str" interface based on glib strings, or
QStrings, or whatever with almost no changes to the code using the
libast string API (once the function calls like spif_str_new() are
replaced with macro calls like SPIF_STR_NEW()).

A UTF-8-based string implementation is forthcoming.
----------------------------------------------------------------------
Wed Dec 29 19:58:03 2004                        Michael Jennings (mej)

Attempting to move toward using newer autoSPLAT tools by default.
----------------------------------------------------------------------
Wed Jan  5 15:19:52 2005                        Michael Jennings (mej)

Spec dependency fixes.
----------------------------------------------------------------------
Mon Mar  7 15:06:39 2005                        Michael Jennings (mej)

Miscellaneous autoFUCKMEUPTHEASSWITHAPINETREE fixes.
----------------------------------------------------------------------
Mon Mar  7 17:28:00 2005                        Michael Jennings (mej)

Cleaner "make maintainer-clean"

Finally found and fixed that stupid "Config file is designed for a
newer version of FOO" bullshit warning.
----------------------------------------------------------------------
Tue Jun  7 16:28:43 2005                        Michael Jennings (mej)

Force STRICT_ISO_C99 to be defined when using gcc >= 4.0.  Suggestions
and partial patch from John Ellson <ellson@research.att.com>.
----------------------------------------------------------------------